--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 rand = { workspace = true }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { workspace = true }
+uuid = { version = "1.0", features = ["v4", "serde"] }
