--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -23,3 +23,4 @@ tower-http = { version = "0.6", features = ["fs"] }
 tower = "0.5"
 tower_governor = "0.4"
 governor = "0.6"
+uuid = { version = "1.0", features = ["v4", "serde"] }
