--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -19,7 +19,9 @@ common_macros = "0.1.1"
 lazy_static = "1.5.0"
 dotenvy = "0.15"
 futures = "0.3"
-tower-http = { version = "0.6", features = ["fs"] }
+tower-http = { version = "0.6", features = ["fs", "cors"] }
 tower = "0.5"
 tower_governor = "0.4"
 governor = "0.6"
+uuid = { version = "1.0", features = ["v4", "serde"] }
+subtle = "2.6"
